# test-a2a

./: README.md
sample-example/: README.md  echo_client.py  echo_server.py  streaming_echo_client.py  streaming_echo_server.py
sample-example/common/client/: __init__.py  card_resolver.py
sample-example/common/server/: __init__.py
simple_test/: README.md  docker-compose.yml
simple_test/math_agent/: Dockerfile  main.py  pyproject.toml
simple_test/orchestrator/: Dockerfile  main.py  pyproject.toml
simple_test/translation_agent/: Dockerfile  main.py  pyproject.toml
travel_assistent/: README.md  pyproject.toml  schemas.py  travel_ui.py
travel_assistent/agents/activities_agent/: __main__.py  agent.py
travel_assistent/agents/activities_agent/.well-known/: agent.json
travel_assistent/agents/flight_agent/: __main__.py  agent.py  task_manager.py
travel_assistent/agents/flight_agent/.well-known/: agent.json
travel_assistent/agents/host_agent/: __main__.py  agent.py  task_manager.py
travel_assistent/agents/host_agent/.well-known/: agent.json
travel_assistent/agents/stay_agent/: __main__.py  agent.py
travel_assistent/agents/stay_agent/.well-known/: agent.json
travel_assistent/common/: a2a_client.py  a2a_server.py
