[tool.poetry]
name = "math_agent"
version = "0.1.0"
description = ""
authors = ["victorinect <victor.barra@inect.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
uvicorn = ">=0.34.1,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
